--- a/src/common/overviewComponent/DynamicItem.scss
+++ b/src/common/overviewComponent/DynamicItem.scss
@@ -23,21 +23,19 @@
         }
         .dynamic-work-oldvalue {
             padding: 5px 10px; 
-            background-color: #F4F5F7; 
+            // background-color: #F4F5F7; 
             font-size: 12px; 
             line-height: 15px;
             border-radius: 5px; 
-            margin: 0 10px;
             width: 44px;
             white-space: nowrap;
         }
         .dynamic-work-newValue {
             padding: 5px 10px; 
-            background-color: #F4F5F7; 
+            // background-color: #F4F5F7; 
             font-size: 12px; 
             line-height: 15px;
             border-radius: 5px; 
-            margin: 0 10px;
             width: 56px;
             white-space: nowrap;
         }
