--- a/src/common/projectAside/ProjectAside.scss
+++ b/src/common/projectAside/ProjectAside.scss
@@ -1,6 +1,4 @@
 .project-detail-side {
-    // background-color: var(--thoughtware-gray-600);
-    border-right: 1px solid #f0f0f0;
 
     .project-aside {
         height: 100%;
@@ -20,7 +18,7 @@
 
             .project-back-project {
                 margin-bottom: 10px;
-                border-bottom: 1px solid #d7d7d7;
+                border-bottom: 1px solid #eaeaea;
             }
 
             .project-menu-submenu {
