--- a/src/projectSet/common/components/ProjectSetDetailAside.scss
+++ b/src/projectSet/common/components/ProjectSetDetailAside.scss
@@ -1,8 +1,7 @@
 
 
     .projectSet-detail-side {
-        background-color: var(--thoughtware-gray);
-        border-right: 1px solid #f0f0f0;
+        background-color: #f0f3fa;
         .projectSet-icon {
             width: 20px;
             height: 20px;
