--- a/src/sprint/common/components/SprintChangeModal.scss
+++ b/src/sprint/common/components/SprintChangeModal.scss
@@ -37,7 +37,8 @@
         display: flex;
         width: 100%;
         align-items: center;
-        padding: 10px 21px;
+        justify-content: center;
+        padding: 15px 0;
         cursor: pointer;
         .sprint-aside-icon {
             width: 15px;
