--- a/src/home/insight/components/ProjectOperateTable.scss
+++ b/src/home/insight/components/ProjectOperateTable.scss
@@ -4,7 +4,7 @@
     width: 100%;
     margin-bottom: 10px;
     height: 100%;
-    background-color: #fff;
+    background-color: #fafbfc;
     // overflow: auto;
     // box-shadow: 0 2px 15px rgba(0,0,0,.15);
     .project-breadcrumb {
