--- a/src/home/insight/components/ProjectSetWorkItem.scss
+++ b/src/home/insight/components/ProjectSetWorkItem.scss
@@ -3,7 +3,7 @@
     border-radius: 4px;
     margin-bottom: 10px;
     height: 100%;
-    background-color: #fff;
+    background-color: #fafbfc;
     // box-shadow: 0 2px 15px rgba(0,0,0,.15);
     &-top {
         height: 40px;
