--- a/src/home/insight/components/UserWorkItem.scss
+++ b/src/home/insight/components/UserWorkItem.scss
@@ -4,7 +4,7 @@
     border-radius: 4px;
     margin-bottom: 10px;
     height: 100%;
-    background-color: #fff;
+    background-color: #fafbfc;
     &-top {
         height: 40px;
         line-height: 40px;
