--- a/src/projectSet/common/components/ProjectSetChangeModal.scss
+++ b/src/projectSet/common/components/ProjectSetChangeModal.scss
@@ -25,7 +25,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 15px 12px;
+        padding: 15px;
         font-weight: 600;
         cursor: pointer;
         gap: 5px;
@@ -58,9 +58,10 @@
     }
 
     .projectSet-change-icon {
-        padding: 15px 0 15px 15px;
+        padding: 15px 0;
         display: flex;
         align-items: center;
+        justify-content: center;
         gap: 5px;
         .projectSet-aside-icon {
             width: 15px;
