--- a/src/setting/common/components/Orga.scss
+++ b/src/setting/common/components/Orga.scss
@@ -34,7 +34,7 @@
             height: 40px;
             line-height: 40px;
             padding: 0 20px;
-            border-bottom: 1px solid #d7d7d7;
+            border-bottom: 1px solid #eaeaea;
             gap: 5px;
             cursor: pointer;
             border-left: 3px solid transparent;
