--- a/src/statistics/components/StatisticsAside.scss
+++ b/src/statistics/components/StatisticsAside.scss
@@ -1,7 +1,7 @@
 .project-statistics-aside {
-    background: #fff;
+    background: var(--thoughtware-gray-600);
     width: 250px;
-    border-right: 1px solid var(--thoughtware-gray-200);
+    // border-right: 1px solid var(--thoughtware-gray-200);
     height: 100%;
 
     .statistics-top-title {
