--- a/src/work/components/WorkAside.scss
+++ b/src/work/components/WorkAside.scss
@@ -1,7 +1,7 @@
 .work-aside {
     width: 300px;
     border-right: 1px solid var(--thoughtware-gray-200);
-    background-color: var(--thoughtware-gray-610);
+    // background-color: var(--thoughtware-gray-610);
     ul {
         padding: 0
     }
@@ -14,7 +14,6 @@
         // overflow-y: auto;
         width: 100%;
         background-color: #fff;
-        padding-top: 10px;
         .worklist-head-second {
             padding: 0 10px;
             display: flex;
@@ -163,7 +162,7 @@
         align-items: center;
         justify-content: space-between;
         padding: 5px 10px;
-        background: var(--thoughtware-gray-600);
+        // background: var(--thoughtware-gray-600);
         
         .work-aside-page-total {
             font-size: 12px;
