--- a/src/work/components/WorkSort.scss
+++ b/src/work/components/WorkSort.scss
@@ -22,7 +22,8 @@
         border-radius: 4px;
         z-index: 3;
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
-        right: 0;
+        right: -10px;
+        top: 30px;
     }
 
     .work-view-head {
