--- a/src/common/projectAside/ProjectAside.scss
+++ b/src/common/projectAside/ProjectAside.scss
@@ -18,7 +18,7 @@
 
             .project-back-project {
                 margin-bottom: 10px;
-                border-bottom: 1px solid #eaeaea;
+            border-bottom: 1px solid #d7d7d7;
             }
 
             .project-menu-submenu {
