--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -88,6 +88,11 @@ $form-input-color: #e3e8f07d;
     width: 24px;
     height: 24px;
 }
+
+.icon-28 {
+    width: 28px;
+    height: 28px;
+}
 .icon-22 {
     width: 22px;
     height: 22px;
