--- a/src/projectSet/setting/common/components/ProjectSetSettingDetailAside.scss
+++ b/src/projectSet/setting/common/components/ProjectSetSettingDetailAside.scss
@@ -58,7 +58,7 @@
         }
     }
     .title {
-        border-bottom: 1px solid #eaeaea;
+    border-bottom: 1px solid #d7d7d7;
     }
 
     .setting {
