--- a/src/setting/common/components/Orga.scss
+++ b/src/setting/common/components/Orga.scss
@@ -22,8 +22,11 @@
             line-height: 40px;
             padding: 0 20px;
             font-size: 16px;
+            cursor: pointer;
         }
-
+        .orga-aside-name:hover {
+            background-color: var(--thoughtware-gray-400);
+        }
         .orga-aside-back:hover {
             background-color: var(--thoughtware-gray-400);
         }
@@ -34,7 +37,7 @@
             height: 40px;
             line-height: 40px;
             padding: 0 20px;
-            border-bottom: 1px solid #eaeaea;
+        border-bottom: 1px solid #d7d7d7;
             gap: 5px;
             cursor: pointer;
             border-left: 3px solid transparent;
