--- a/src/setting/home/components/SettingHome.scss
+++ b/src/setting/home/components/SettingHome.scss
@@ -22,6 +22,7 @@ $inline-padding: 15px;
         white-space: nowrap;
         text-overflow: ellipsis;
         -o-text-overflow: ellipsis;
+        text-align: right;
         font-weight: var(--thoughtware-font-weight-bold);
     }
     .home-licence-box{
@@ -52,6 +53,10 @@ $inline-padding: 15px;
                     .licence-level-info{
                         font-size: 15px;
                         font-weight: var(--thoughtware-font-weight-bold);
+                    }
+                    .licence-level-click:hover {
+                        cursor: pointer;
+                        color: var(--thoughtware-blue);
                     }
                     .licence-level-issuedTime{
                         padding-left: 5px;
@@ -111,6 +116,9 @@ $inline-padding: 15px;
                    width: 100px;
                    margin-right: 10px;
                    cursor: pointer;
+                   display: flex;
+                   align-items: center;
+                   gap: 5px;
                }
                &:hover{
                    color: var(--thoughtware-blue);
@@ -200,7 +208,7 @@ $inline-padding: 15px;
     .home-chunk-box{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: $inline-spacing;
+        gap: 20px;
         white-space: nowrap;
     }
 
