--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -93,6 +93,10 @@ $form-input-color: #e3e8f07d;
     width: 28px;
     height: 28px;
 }
+.icon-29 {
+    width: 29px;
+    height: 29px;
+}
 .icon-22 {
     width: 22px;
     height: 22px;
