--- a/src/common/projectAside/MoreMenuModal.scss
+++ b/src/common/projectAside/MoreMenuModal.scss
@@ -83,7 +83,7 @@
     
         .project-menu-select {
             background-color: var(--thoughtware-gray-400);
-            border-left: 3px solid var(--thoughtware-blue);
+            border-left: 0 !important;
         }
 
     }
