--- a/src/work/components/WorkFilterModal.scss
+++ b/src/work/components/WorkFilterModal.scss
@@ -30,7 +30,7 @@
 
     .filter-modal {
         width: 420px;
-        height: 100%;
+        height: 100vh;
         background-color: #fff;
         position: absolute;
         z-index: 3;
