--- a/src/home/common/components/FirstMenuButtom.scss
+++ b/src/home/common/components/FirstMenuButtom.scss
@@ -30,7 +30,7 @@
     }
     
 }
-.thoughtware_licence_modal{
+.tiklab_licence_modal{
     .ant-modal-body {
         padding: 0 15px 15px !important;
     }
