--- a/src/home/common/components/TodoPage.scss
+++ b/src/home/common/components/TodoPage.scss
@@ -1,5 +1,5 @@
 .todo-page {
-    height: calc(100% - 48px);
+    height: 100%;
     overflow: auto;
     background-color: var(--tiklab-gray-600);
     padding: var(--tiklab-padding);
