--- a/src/project/wiki/components/WikiRepository.scss
+++ b/src/project/wiki/components/WikiRepository.scss
@@ -34,6 +34,7 @@
     .document-title {
         display: flex;
         align-items: center;
+        cursor: pointer;
     }
     .document-title:hover {
         color: var(--tiklab-blue);
