--- a/src/sprint/common/components/SprintLayout.scss
+++ b/src/sprint/common/components/SprintLayout.scss
@@ -10,6 +10,13 @@
         height: 40px;
         line-height: 40px;
     }
+    .sprint-detail-empty {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 
