--- a/src/project/workLog/components/LogContent.scss
+++ b/src/project/workLog/components/LogContent.scss
@@ -16,7 +16,17 @@
     .worklog-content:hover {
         color: var(--tiklab-blue);
     }
-    
+    .work-name {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: normal;
+        word-break: break-word;
+        display: flex;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        padding-right: 20px;
+        cursor: pointer;
+    }
 }
 
 
