--- a/src/project/lineMap/component/VersionPage.scss
+++ b/src/project/lineMap/component/VersionPage.scss
@@ -1,5 +1,6 @@
 .version {
     margin-top: 15px;
+    height: calc(100% - 87px);
     .ant-empty {
         margin-top: 20px;
     }
@@ -62,13 +63,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        
-
     }
 
     .version-name:hover {
         color: var(--tiklab-blue);
-        background-color: var(--tiklab-gray-400);
     }
 
     .version-linemap {
@@ -89,6 +87,10 @@
         .version-status-done {
             background: #dfecd5e3;
             color: #5e5314;
+        }
+        .version-icon {
+            font-size: 12px;
+            margin-right: 5px;
         }
     }
 }
