修改事项类型权限

--- a/src/common/overviewComponent/DynamicItem.scss
+++ b/src/common/overviewComponent/DynamicItem.scss
@@ -27,8 +27,11 @@
             font-size: 12px; 
             line-height: 15px;
             border-radius: 5px; 
-            width: 44px;
+            width: fit-content;
+            max-width: 100px;
+            text-overflow: ellipsis;
             white-space: nowrap;
+            overflow: hidden;
         }
         .dynamic-work-newValue {
             padding: 5px 10px; 
