--- a/src/project/wiki/components/WikiRepositoryAdd.scss
+++ b/src/project/wiki/components/WikiRepositoryAdd.scss
@@ -1,7 +1,7 @@
 .repository-add-modal {
-    height: calc(100% - 100px);
+    max-height: calc(100% - 100px);
     .ant-modal-body {
         overflow: auto;
-    height: calc(100% - 100px);
+        max-height: calc(100% - 100px);
     }
 }
